[gd_scene load_steps=4 format=3 uid="uid://b0clenho7ykn7"]

[ext_resource type="Script" path="res://Menu/Options/options.gd" id="1_pshbr"]
[ext_resource type="PackedScene" uid="uid://dhjs6sfynfnei" path="res://Menu/Options/action_remap_button.tscn" id="2_0oq05"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cqn46"]
bg_color = Color(0, 0, 0, 0.839216)

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pshbr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cqn46")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1

[node name="Inputs" type="TabBar" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Inputs"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_right = 96.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Inputs/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Inputs/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Swing Left"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/TabContainer/Inputs/VBoxContainer/HBoxContainer" instance=ExtResource("2_0oq05")]
layout_mode = 2
action = "input_left"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Inputs/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Inputs/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Swing Right"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/TabContainer/Inputs/VBoxContainer/HBoxContainer2" instance=ExtResource("2_0oq05")]
layout_mode = 2
text = "input_right"
action = "input_right"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Inputs/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Inputs/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Dash"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/TabContainer/Inputs/VBoxContainer/HBoxContainer3" instance=ExtResource("2_0oq05")]
layout_mode = 2
text = "input_dash"
action = "input_dash"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Inputs/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Inputs/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Pause"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/TabContainer/Inputs/VBoxContainer/HBoxContainer4" instance=ExtResource("2_0oq05")]
layout_mode = 2
text = "input_dash"
action = "input_pause"

[node name="Audio" type="TabBar" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="Return" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Return"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="SaveReturn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save & Return"

[node name="Discard" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Discard Changes"

[node name="Clear" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear Save"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SaveReturn" to="." method="_on_save_return_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Discard" to="." method="_on_discard_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Clear" to="." method="_on_clear_pressed"]
